[gd_scene load_steps=5 format=3 uid="uid://b16qpcnwwmyb7"]

[ext_resource type="Script" path="res://scenes/view/screens/end_screen.gd" id="1_0kme1"]
[ext_resource type="AudioStream" uid="uid://c0umr81gweed6" path="res://assets/audio/winend/success-fanfare-trumpets-6185.mp3" id="2_5efgp"]
[ext_resource type="FontFile" uid="uid://b6mrtdyn73pow" path="res://resources/fonts/monogram.ttf" id="2_lvxr6"]

[sub_resource type="LabelSettings" id="LabelSettings_nupd1"]
font = ExtResource("2_lvxr6")
font_size = 32

[node name="EndScreen" type="CanvasLayer" groups=["end_screen"]]
process_mode = 3
script = ExtResource("1_0kme1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_5efgp")
volume_db = -10.0
bus = &"sfx"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Thanks for playing my game!
Now you can go to buy
some upgrades in menu!
+100 $"
label_settings = SubResource("LabelSettings_nupd1")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Restart"

[node name="ContinueButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Continue endless mode"

[node name="EndAndStatsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Quit"
